HFP-1556 Fix popup not centered on navbar
Change JS-based solution to a CSS-based solution for hiding/showing
popups and positioning.

--- a/src/styles/navigation-line.css
+++ b/src/styles/navigation-line.css
@@ -327,9 +327,12 @@
 
 /* ----------------------------------------- Progressbar popup ------------------------------------ */
 .h5p-course-presentation .h5p-progressbar-popup {
-  display: block;
+  display: none;
   position: absolute;
   bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+
   z-index: 3; /* Must be above feedback, which is 2 */
 
   font-size: 0.75em;
@@ -342,6 +345,21 @@
   color: #FFF;
   
   pointer-events: none;
+}
+
+.h5p-course-presentation .h5p-progressbar-part:first-child .h5p-progressbar-popup {
+  left: 0;
+  transform: translateX(0);
+}
+
+.h5p-course-presentation .h5p-progressbar-part:last-child .h5p-progressbar-popup {
+  left: auto;
+  right: 0;
+  transform: translateX(0);
+}
+
+.h5p-course-presentation .h5p-progressbar-part:hover .h5p-progressbar-popup {
+  display: block;
 }
 
 /* -------------------------------------- Footer hover effects ---------------------------------- */
